--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -3,18 +3,25 @@ StackLayout {
     margin-right: 30;
     padding-bottom: 15;
     background-color: white;
-  }
-  Image {
+}
+
+Image {
     margin-top: 5;
     margin-bottom: 20;
-  }
-  Button, TextField {
+}
+
+Button, TextField {
     margin-left: 16;
     margin-right: 16;
     margin-bottom: 10;
-  }
-  .submit-button {
+}
+
+.submit-button {
     background-color: #CB1D00;
     color: white;
     margin-top: 20;
-  }
+}
+
+.background {
+    background-image: url("res://bg_login");
+}
